# depzip

./: README.md  pyproject.toml
depzip/: __init__.py
examples/: app.py  bundle.py  import.c  run.c
